--- a/w3_flask_library/templates/book.html
+++ b/w3_flask_library/templates/book.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <nav>
-        <ul>
-            <li class="navLink"><a href="/books">Home</a></li>
-        </ul>
-    </nav>
-    <hr>
+{% extends "base.html" %}
+
+{% block content %}
+
     <h1>Book</h1>
 
     <div class="book-container">
@@ -23,5 +12,5 @@
             <h4>{{ book.genre }}</h4>
         </div>
     </div>
-</body>
-</html>
+
+{% endblock %}
