--- a/w3_flask_library/templates/index.html
+++ b/w3_flask_library/templates/index.html
@@ -1,18 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-  
-    <h2>Add Book</h2>
 
-    <form action="/books" method="post">
-      <label for="title">Title</label>
-      <input type="text" name="title" id="title">
-      <label for="author">Author</label>
-      <input type="text" name="author" id="author">
-      <label for="genre">Genre</label>
-      <input type="text" name="genre" id="genre">
-      <input type="submit" value="Add Book">
-    </form>
+<h1>All Books</h1>
+<div class="book-container">
+{% for book in book_list %}
+    <div class="book">
+      <h2>{{ book.title }}</h2>
+      <h3>{{ book.author }}</h3>
+      <h4>{{ book.genre }}</h4>
+      <a href="/books//{{book_list.index(book)}}">Show Book</a>
+    </div>
+{% endfor %}
 
 {% endblock  %}
 
