--- a/w3_flask_library/templates/book.html
+++ b/w3_flask_library/templates/book.html
@@ -10,6 +10,11 @@
             <h2>{{ book.title }}</h2>
             <h3>{{ book.author }}</h3>
             <h4>{{ book.genre }}</h4>
+            <!-- <h4>{{ book.checked_out }}</h4> -->
+            <input type="checkbox" id="checked_out" name="checked_out">
+            <label for="checked_out">checked out</label>
+            <!-- <h4>{{ book.available }}</h4> -->
+            
         </div>
     </div>
 
