--- a/w3_flask_library/static/styles.css
+++ b/w3_flask_library/static/styles.css
@@ -2,11 +2,55 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+
 .home_header {
-    height: 4rem;
-    background-color:  #4584b1;
-    color: #fff;
+    height: 8rem;
+    padding: 10px;
+    background-color:  #dc2153;
     display: flex;
     align-items: center;
     font-size: 2rem;
+    border: 5px; color: black;
+}
+
+footer {
+    height: 6rem;
+    padding: 10px;
+    background-color: #dc2153;
+    border: 5px; color: black;
+}
+
+footer > h2 {
+    color: white;
+}
+
+header > h1 > a:link {
+    text-decoration: none;
+    color: white;
+}
+
+header > h1 > a:visited {
+    text-decoration: none;
+    color: white;
+}
+
+header > h1 > a:hover {
+    text-decoration: none;
+    color: chartreuse;
+}
+
+header > h1 > a:active {
+    text-decoration: none;
+}
+
+.book {
+    border-style: solid;
+    border-width: 10px;
+    border-color: #dc2153;
+    padding: 10px;
+}
+
+.bookline {
+    color: #dc2153;
 }
