--- a/w3_flask_library/templates/home.html
+++ b/w3_flask_library/templates/home.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeClan Library</title>
-</head>
+{% extends 'base.html' %}
+
+{% block content %}
 <body>
-    <h1>Welcome to the CodeClan Library</h1>
-    <a href="/books">Enter</a>
+    <h1 class="home-banner">Welcome to the CodeClan Library</h1>
+    <a href="/books">All books</a>
 </body>
-</html>
+</html>    
+{% endblock  %}
