--- a/w3_flask_library/static/styles.css
+++ b/w3_flask_library/static/styles.css
@@ -23,6 +23,10 @@ footer {
     border-color: black;
 }
 
+h2 {
+    font-style: italic;
+}
+
 footer > h2 {
     color: white;
 }
@@ -51,8 +55,37 @@ header > h1 > a:active {
     border-width: 10px;
     border-color: #dc2153;
     padding: 10px;
+    text-align: center;
 }
 
+.book > a {
+    font-size: 32px;
+    font-weight: bolder;
+}
+
+.book > a:link {
+    text-decoration: none;
+    color: black;
+}
+
+.book > a:visited {
+    text-decoration: none;
+    color: black;
+}
+
+.book > a:hover {
+    text-decoration: none;
+    color: chartreuse;
+}
+
+.book > a:active {
+    text-decoration: none;
+}
+
+.description{
+    font-style: italic;
+    text-align: center;
+}
 .bookline {
     color: #dc2153;
 }
@@ -65,10 +98,14 @@ header > h1 > a:active {
     height: 8rem;
     padding: 10px;
     background-color:  #dc2153;
-    display: flex;
-    align-items: center;
     font-size: 2rem;
     border-style: solid;
     border-width: 10px;
     border-color: black;
+}
+
+hr {
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
 }
