--- a/w3_flask_library/templates/home.html
+++ b/w3_flask_library/templates/home.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 <body>
-    <h1 class="home-banner">Welcome to the CodeClan Library</h1>
-    <a href="/books">All books</a>
+    <a href="/books"><img src="/static/books.png" alt="bookshelf"></a>
 </body>
 </html>    
 {% endblock  %}
