--- a/w4_fullstack_library/templates/books/index.html
+++ b/w4_fullstack_library/templates/books/index.html
@@ -4,26 +4,20 @@
 
 {% for book in all_books %}
   <div class="book">
-    <!-- <div class="content">
-      {{task.user.first_name}}
+    <div class="content">
+      <h2>{{book.title}}</h2>
+      <h3>{{ book.author.first_name + book.author.last_name }}</h3>
       <div class="description">
-        <a href="/tasks/{{task.id}}">{{task.description}}</a>
-        <span class="duration">{{task.duration}} mins</span>
+        <p>{{book.description}}</p>
       </div>
-      <div class="buttons">
+    </div>
+    <div class="buttons">
 
-        <form class="delete-form" action="/tasks/{{task.id}}/delete" method="POST">
-          <button class="trash-button"><i class="fa fa-trash-o fa-3x" style="color:red" aria-hidden="true"></i></button>
-        </form>
-
-        {% if task.completed == True %}
-          <i class="fa fa-check fa-2x" style="color:green" aria-hidden="true"></i>
-        {% else %}
-          <i class="fa fa-times fa-2x" aria-hidden="true"></i>
-        {% endif %}
-      </div>
+      <form class="delete-form" action="/books/{{book.id}}/delete" method="POST">
+        <button class="trash-button"><i class="fa fa-trash-o fa-3x" style="color:red" aria-hidden="true"></i></button>
+      </form>
     </div>
   </div>
 {% endfor %}
 
-{% endblock %} -->
+{% endblock %}
