--- a/w4_fullstack_library/templates/index.html
+++ b/w4_fullstack_library/templates/index.html
@@ -1,4 +1,2 @@
 {% extends "base.html" %}
-{% block content %}
-This will be the home page. Depending on our UX we might have a dashboard here showing some stats for example.
-{% endblock %}
+{% block content %}CodeClan Library Homepage{% endblock %}
