work on moons paths

--- a/p1_solar_system/templates/index.html
+++ b/p1_solar_system/templates/index.html
@@ -2,6 +2,6 @@
 {% block home %}
 <section id="home-image">
     <p>homepage</p>
-    <p><a href="/planets"></a>Enter</p>
+    <p><a href="{{ url_for('planets.planets') }}"></a>Enter</p>
 </section>
 {% endblock %}
