--- a/p1_solar_system/templates/planets/show.html
+++ b/p1_solar_system/templates/planets/show.html
@@ -2,12 +2,13 @@
 {% block content %}
 
   <div>
-    <p>{{planet.name}}</p>
+    <p>{{ planet.name }}</p>
     <hr>
-    <p>{{planet.mass}}</p>
-    <p>{{planet.temp}}</p>
-    <p>{{planet.gravity}}</p>
+    <p>{{ planet.mass }}</p>
+    <p>{{ planet.temp }}</p>
+    <p>{{ planet.gravity }}</p>
     <!-- <p><a href="/planets/{{planet.id}}/edit">Edit</a></p> -->
+    <a href="/planets/{{planet.id}}/moons">Moons</a>
   </div>
 
 {% endblock %}
